renombramiento de pagina producto por indice

--- a/src/pages/Indice/EditIndice.css
+++ b/src/pages/Indice/EditIndice.css
@@ -1,10 +1,10 @@
-.edit-product__form {
+.edit-indice__form {
     width: 90%;
     margin: auto;
   }
   
   @media (min-width: 768px) {
-    .edit-product__form {
+    .edit-indice__form {
       width: 40rem;
     }
   }
