--- a/src/pages/Indice/Indice.css
+++ b/src/pages/Indice/Indice.css
@@ -1,8 +1,8 @@
-.product-page {
+.indice-page {
     text-align: center;
 }
 
-.product-page__image {
+.indice-page__image {
     width: 25rem;
     height: 25rem;
     background-position: center;
