--- a/src/components/Indices/IndiceItem/IndiceItem.css
+++ b/src/components/Indices/IndiceItem/IndiceItem.css
@@ -1,4 +1,4 @@
-.product-item {
+.indice-item {
   display: flex;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   height: 12.5rem;
@@ -6,7 +6,7 @@
   position: relative;
 }
 
-.product-item__image {
+.indice-item__image {
   width: 35%;
   height: 100%;
   background-position: center;
@@ -14,31 +14,31 @@
   margin-right: 5%;
 }
 
-.product-item__content {
+.indice-item__content {
   width: 60%;
 }
 
-.product-item__content h1 {
+.indice-item__content h1 {
   font-size: 1.25rem;
   color: #6200ff;
   margin: 0.5rem 0;
 }
 
-.product-item__content h2 {
+.indice-item__content h2 {
   font-size: 1rem;
   color: #292929;
   margin: 0;
 }
 
-.product-item__controls {
+.indice-item__controls {
   position: absolute;
   bottom: 1rem;
   right: 1rem;
   text-align: right;
 }
 
-.product-item__controls button,
-.product-item__controls a {
+.indice-item__controls button,
+.indice-item__controls a {
   text-decoration: none;
   cursor: pointer;
   font: inherit;
@@ -49,9 +49,9 @@
   margin: 0 0.5rem;
 }
 
-.product-item__controls button:hover,
-.product-item__controls button:active,
-.product-item__controls a:hover,
-.product-item__controls a:active {
+.indice-item__controls button:hover,
+.indice-item__controls button:active,
+.indice-item__controls a:hover,
+.indice-item__controls a:active {
   color: #320083;
 }
