--- a/src/components/Indices/Indices.css
+++ b/src/components/Indices/Indices.css
@@ -1,11 +1,11 @@
-.products {
+.indices {
     width: 95%;
     margin: auto;
 }
 
 
 @media (min-width: 768px) {
-    .products {
+    .indices {
         width: 80%;
     }   
 }
