--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,5 +7,19 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Questrial", sans-serif;
+  line-height: 1.5;
+}
+
+h1,
+h2 {
+  margin: 5px;
+  padding: 0rem;
+  text-align: center;
+  background-color: #1c52ac;
+  color: whitesmoke;
+  box-sizing: inherit;
+  display: block;
+  float: initial;
+  border-radius: 15px 45px 15px 45px;
 }
